<resources>
    <string name="app_name">BasicPhrases</string>
    <string name="hello">Hello</string>
    <string name="goodbye">Goodbye</string>
    <string name="please">Please</string>
    <string name="thank_you">Thank you</string>
    <string name="how_are_you">How are you?</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="where_are_you_from">Where are you from?</string>
    <string name="nice_to_meet_you">Nice to meet you</string>
</resources>
