<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_constraint_layout"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/hello_button"
            android:layout_rowWeight="1"
            android:tag="hello_german"
            android:layout_columnWeight="1"
            android:onClick="playAudioPhrase"
            android:text="@string/hello" />

        <Button
            android:id="@+id/goodbye_button"
            android:layout_rowWeight="1"
            android:tag="goodbye_german"
            android:background="@color/colorPrimaryDark"
            android:layout_columnWeight="1"
            android:onClick="playAudioPhrase"
            android:text="@string/goodbye" />

        <Button
            android:id="@+id/please_button"
            android:layout_rowWeight="1"
            android:onClick="playAudioPhrase"
            android:tag="please_german"
            android:background="@color/colorPrimaryDark"
            android:layout_columnWeight="1"
            android:text="@string/please" />

        <Button
            android:id="@+id/thank_you_button"
            android:layout_rowWeight="1"
            android:onClick="playAudioPhrase"
            android:layout_columnWeight="1"
            android:tag="thank_you_german"
            android:text="@string/thank_you" />

        <Button
            android:id="@+id/what_is_your_name_button"
            android:layout_rowWeight="1"
            android:onClick="playAudioPhrase"
            android:layout_columnWeight="1"
            android:tag="what_is_your_name_german"
            android:text="@string/what_is_your_name" />

        <Button
            android:id="@+id/where_are_you_from_button"
            android:layout_rowWeight="1"
            android:onClick="playAudioPhrase"
            android:background="@color/colorPrimaryDark"
            android:layout_columnWeight="1"
            android:tag="where_are_you_from_german"
            android:text="@string/where_are_you_from" />

        <Button
            android:id="@+id/how_are_you_button"
            android:layout_rowWeight="1"
            android:onClick="playAudioPhrase"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:tag="how_are_you_german"
            android:text="@string/how_are_you" />

        <Button
            android:id="@+id/nice_to_meet_you_button"
            android:onClick="playAudioPhrase"
            android:tag="nice_to_meet_you_german"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/nice_to_meet_you" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>